snapshot to thz state

--- a/src/app/Secretaire/detail-patient/detail-patient.component.html
+++ b/src/app/Secretaire/detail-patient/detail-patient.component.html
@@ -181,11 +181,11 @@
                                                                             &nbsp;&nbsp;&nbsp;
 
                                                                             <span>
-                                                                                <a class="btn btn-primary btn-xs"
-                                                                                    title="prescription"
+                                                                                <a title="prescription"
                                                                                     (click)="currentResidentPrescription(currentResidentS?.id)"
-                                                                                    style="color: white;"><i
-                                                                                        class="fa fa-folder-open-o"></i>
+                                                                                    style="font-size: 15px;"
+                                                                                    class="btn btn-default btn-xs"><i
+                                                                                        class="fa fa-file-archive-o"></i>
                                                                                 </a>
                                                                             </span>
                                                                         </li>
