--- a/src/app/Secretaire/edit-medical-prescription/edit-medical-prescription.component.html
+++ b/src/app/Secretaire/edit-medical-prescription/edit-medical-prescription.component.html
@@ -25,8 +25,14 @@
                         <div class="col-md-10 col-sm-10 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <button class="btn" id="add" (click)="editPatient(prescription.patient.id)"><i
-                                            class="fa fa-times"></i></button>
+                                    <button class="btn" id="add" (click)="detailPatient(prescription.patient.id)"><i
+                                            class="fa fa-times"></i>
+                                    </button><br>
+                                    <button class="btn" (click)="detailMedicalPrescription(prescription.id)"><i
+                                            class="fa fa-file-powerpoint-o"></i>
+                                    </button>
+
+
                                     <h1 style="text-align: center;">Prescription Médicale </h1><br>
                                     <div class="col-md-6 col row">
                                         <label class="col-form-label col-md-3 col-sm-3 label-align"
