--- a/src/app/Secretaire/edit-suivi-prescription/edit-suivi-prescription.component.html
+++ b/src/app/Secretaire/edit-suivi-prescription/edit-suivi-prescription.component.html
@@ -27,6 +27,9 @@
                                 <div class="x_title">
                                     <button class="btn" id="add" (click)="editPatient(prescription.patient.id)"><i
                                             class="fa fa-times"></i></button>
+                                    <button class="btn" (click)="detailSuiviPrescription(prescription.id)"><i
+                                            class="fa fa-file-powerpoint-o"></i>
+                                    </button>
                                     <h1 style="text-align: center;">Prescription survaillance </h1><br>
                                     <div class="col-md-6 col row">
                                         <label class="col-form-label col-md-3 col-sm-3 label-align"
