--- a/src/app/Secretaire/detail-medical-prescription/detail-medical-prescription.component.html
+++ b/src/app/Secretaire/detail-medical-prescription/detail-medical-prescription.component.html
@@ -132,7 +132,7 @@
 
 
                                         <div class="x_content">
-                                            <ng-container *ngFor="let item of prescription.contenu">
+                                            <ng-container *ngFor="let item of prescription?.contenu">
                                                 <div class="dashboard-widget-content" *ngIf="!item.etat"
                                                     style="background-color:#F5F5F5;">
 
