add file soin suivi

--- a/src/app/Infirmier/fiches-infirmier-actif/fiches-infirmier-actif.component.html
+++ b/src/app/Infirmier/fiches-infirmier-actif/fiches-infirmier-actif.component.html
@@ -151,7 +151,8 @@
                                                                                 &nbsp;+ Fiche SOIN
                                                                             </a></ng-template>
                                                                         <ng-template [ngIf]="prescription.type=='SUIV'">
-                                                                            <a (click)="ficheSoin(c.id)" title="view"><i
+                                                                            <a (click)="ficheSoinSuivi(c.id)"
+                                                                                title="view"><i
                                                                                     class="fa fa-file-powerpoint-o"></i>&nbsp;
                                                                                 + Fiche suivi
                                                                             </a></ng-template>
